<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_forum_share"
		android:icon="@drawable/social_share_white"
		android:title="@string/forum_share_button"
		app:showAsAction="never"/>

	<item
		android:id="@+id/action_forum_sharing_status"
		android:title="@string/sharing_status"
		app:showAsAction="never"/>

	<item
		android:id="@+id/action_send_location"
		android:icon="@drawable/ic_menu_mylocation"
		android:title="@string/action_send_location"
		app:showAsAction="never"/>

	<item
		android:id="@+id/action_forum_voice_distortion"
		android:title="@string/forum_toggle_voice_distortion"
		app:showAsAction="never"/>

	<item
		android:id="@+id/action_walkie_talkie"
		android:title="@string/walkie_talkie_mode"
		app:showAsAction="never"/>

	<item
		android:id="@+id/action_message_retention"
		android:title="@string/message_retention_title"
		app:showAsAction="never"/>

	<item
		android:id="@+id/action_forum_delete"
		android:icon="@drawable/action_delete_white"
		android:title="@string/forum_leave"
		app:showAsAction="never"/>

</menu>