<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<SwitchPreferenceCompat
		android:key="pref_key_panic_enabled"
		android:persistent="false"
		android:defaultValue="true"
		android:title="@string/panic_enabled_title"
		android:summary="@string/panic_enabled_summary"
		app:iconSpaceReserved="false"
		app:singleLineTitle="false" />

	<Preference
		android:key="pref_key_record_sequence"
		android:title="@string/panic_record_sequence_title"
		android:summary="@string/panic_sequence_not_set"
		app:iconSpaceReserved="false"
		app:singleLineTitle="false" />

	<ListPreference
		android:key="pref_key_panic_action"
		android:title="@string/panic_action_title"
		android:entries="@array/panic_action_entries"
		android:entryValues="@array/panic_action_values"
		android:defaultValue="sign_out"
		app:iconSpaceReserved="false"
		app:singleLineTitle="false" />

</PreferenceScreen>
