<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="?attr/colorPrimary"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
		android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="16dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingBottom="16dp">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/setup_title"
				android:textStyle="bold"
				android:textSize="21sp"
				android:paddingBottom="8dp" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/intro_desc"
				android:paddingBottom="16dp" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/how_it_works_title"
				android:textStyle="bold"
				android:textSize="18sp"
				android:paddingBottom="8dp" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/how_it_works_desc"
				android:paddingBottom="16dp" />


			<TextView
				android:id="@+id/onion_link"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/onion_link"
				android:textColor="?android:attr/textColorLink"
				android:autoLink="web"
				android:paddingBottom="8dp" />

			<Button
				android:id="@+id/copy_url_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/copy_url"
				android:gravity="center"
				android:paddingTop="0dp"
				android:paddingBottom="0dp" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/onion_link_instructions"
				android:paddingBottom="16dp" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/nickname_title"
				android:textStyle="bold"
				android:textSize="18sp"
				android:paddingBottom="8dp" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/nickname_desc" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>